apps/production/monitoring/prometheus/prometheus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  serviceName: prometheus

  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          # image tags at https://hub.docker.com/r/prom/prometheus/tags
          # TODO: upgrade to v3: https://prometheus.io/docs/prometheus/3.0/migration/ (looks safe)
          image: prom/prometheus:v3.0.1
          args:
            # storage config: https://prometheus.io/docs/prometheus/latest/storage/
            - "--storage.tsdb.retention.time=30d" # with Erigon and K8s 6h was ~111MB
            - "--storage.tsdb.retention.size=100GB"
            - "--storage.tsdb.path=/prometheus"
            - "--config.file=/etc/prometheus/prometheus.yaml"
            # for basic auth:
            - "--web.config.file=/etc/prometheus/web.yaml"
            # enables `curl -X POST https://prometheus.activescott.com/-/reload` to reload configs per https://prometheus.io/docs/prometheus/latest/configuration/configuration/#scrape_config
            - "--web.enable-lifecycle"

          ports:
            - name: web-ui
              containerPort: 9090

          resources:
            limits:
              cpu: "1.0"
              # unclear what this should be: https://github.com/prometheus/prometheus/issues/5469
              memory: "2Gi"

          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus

            - name: prometheus-secret-volume
              mountPath: /etc/prometheus

            - name: prometheus-storage-volume
              mountPath: /prometheus

      securityContext:
        # this user is on the node's os as the file system owner
        # https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
        runAsUser: 4030
        runAsGroup: 4030
        fsGroup: 4030

      volumes:
        # populated by configMapGenerator in kustomization.yaml
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-config

        - name: prometheus-storage-volume
          hostPath:
            path: /mnt/thedatapool/no-backup/app-data/prometheus/storage

        # we generate these secrets in kustomization.yaml and save each key as a file in this mount
        - name: prometheus-secret-volume
          secret:
            secretName: prometheus-secrets
